--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body{
     height: 100vh;
+    margin: 0;
+    padding: 0;
+    position: relative;
 }
 
 header{
@@ -35,4 +38,16 @@ form{
     position: absolute;
     top: 50%;
     transform: translate(0, -50%);
+}
+
+footer{
+    height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: gray;
+    font-size: 20px;
 }
